[livisismarthome] - Code review findings fixed (various code optimizations)
Signed-off-by: Sven Strohschein <sven.strohschein@gmail.com>